--- a/UniversidadJava/nbproject/project.properties
+++ b/UniversidadJava/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=universidadJava
-main.class=fundamentosJava.HolaMundo
+main.class=fundamentosJava.HelloWorld
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
