--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=fundamentals
+application.title=uJava
 application.vendor=sc
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/fundamentals.jar
+dist.jar=${dist.dir}/uJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/fundamentals
+dist.jlink.output=${dist.jlink.dir}/uJava
 endorsed.classpath=
 excludes=
 includes=**
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=fundamentals
+jlink.launcher.name=uJava
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
