--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /FundamentosAndProgramingWithJava/dist/
 /JDBC/DAOAndTDO/target/
 /JDBC/PersonWithDAOandDTOJDBC/target/
+/JDBC/PoolConnectionsJDBC/target/
