--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /ServletsAndJSPs/headlandmanagement/target/
 /ServletsAndJSPs/headlandmanagement1/target/
 /ServletsAndJSPs/headlandmanagement1-1.0/target/
+/ServletsAndJSPs/ManageStatusCode/target/
