--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /ServletsAndJSPs/headlandmanagement1/target/
 /ServletsAndJSPs/headlandmanagement1-1.0/target/
 /ServletsAndJSPs/ManageStatusCode/target/
+/ServletsAndJSPs/HeadersResponse/target/
