--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /ServletsAndJSPs/headlandmanagement1-1.0/target/
 /ServletsAndJSPs/ManageStatusCode/target/
 /ServletsAndJSPs/HeadersResponse/target/
+/ServletsAndJSPs/ManageCookies/target/
