--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /ServletsAndJSPs/ManageStatusCode/target/
 /ServletsAndJSPs/HeadersResponse/target/
 /ServletsAndJSPs/ManageCookies/target/
+/ServletsAndJSPs/CookiesCounter/target/
