--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /ServletsAndJSPs/HeadersResponse/target/
 /ServletsAndJSPs/ManageCookies/target/
 /ServletsAndJSPs/CookiesCounter/target/
+/ServletsAndJSPs/ShoppingCartExample/target/
