--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /ServletsAndJSPs/ManageCookies/target/
 /ServletsAndJSPs/CookiesCounter/target/
 /ServletsAndJSPs/ShoppingCartExample/target/
+/ServletsAndJSPs/HelloWorldJsp/target/
