--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /ServletsAndJSPs/CookiesCounter/target/
 /ServletsAndJSPs/ShoppingCartExample/target/
 /ServletsAndJSPs/HelloWorldJsp/target/
+/ServletsAndJSPs/ExpressionsJSPs/target/
