--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /ServletsAndJSPs/ShoppingCartExample/target/
 /ServletsAndJSPs/HelloWorldJsp/target/
 /ServletsAndJSPs/ExpressionsJSPs/target/
+/ServletsAndJSPs/scripletsJSPs/target/
