--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /ServletsAndJSPs/HelloWorldJsp/target/
 /ServletsAndJSPs/ExpressionsJSPs/target/
 /ServletsAndJSPs/scripletsJSPs/target/
+/ServletsAndJSPs/statementsJSP/target/
