--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /ServletsAndJSPs/ExpressionsJSPs/target/
 /ServletsAndJSPs/scripletsJSPs/target/
 /ServletsAndJSPs/statementsJSP/target/
+/ServletsAndJSPs/exampleExceJSP/target/
