--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /ServletsAndJSPs/scripletsJSPs/target/
 /ServletsAndJSPs/statementsJSP/target/
 /ServletsAndJSPs/exampleExceJSP/target/
+/ServletsAndJSPs/ExampleIncludeSratic/target/
+/ServletsAndJSPs/ExampleSraticInclude/target/
+/ServletsAndJSPs/ExampleDynamicInclude/target/
