--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /ServletsAndJSPs/ExampleIncludeSratic/target/
 /ServletsAndJSPs/ExampleSraticInclude/target/
 /ServletsAndJSPs/ExampleDynamicInclude/target/
+/ServletsAndJSPs/javaBeans/target/
