--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /ServletsAndJSPs/ExampleSraticInclude/target/
 /ServletsAndJSPs/ExampleDynamicInclude/target/
 /ServletsAndJSPs/javaBeans/target/
+/ServletsAndJSPs/ExampleExpressionLanguage/target/
+/ServletsAndJSPs/ExampleJSTL/target/
