--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /ServletsAndJSPs/javaBeans/target/
 /ServletsAndJSPs/ExampleExpressionLanguage/target/
 /ServletsAndJSPs/ExampleJSTL/target/
+/ServletsAndJSPs/ExampleOneMVC/target/
