--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /ServletsAndJSPs/ExampleExpressionLanguage/target/
 /ServletsAndJSPs/ExampleJSTL/target/
 /ServletsAndJSPs/ExampleOneMVC/target/
+/ServletsAndJSPs/ExampleOneMVC_ExampleOneMVC_war_1.0-SNAPSHOT/target/
+/ServletsAndJSPs/ExampleTwoMVC/target/
