--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /ServletsAndJSPs/ExampleOneMVC/target/
 /ServletsAndJSPs/ExampleOneMVC_ExampleOneMVC_war_1.0-SNAPSHOT/target/
 /ServletsAndJSPs/ExampleTwoMVC/target/
+/ServletsAndJSPs/ControlClinetes/target/
