--- a/ServletsAndJSPs/ControlClinetes/pom.xml
+++ b/ServletsAndJSPs/ControlClinetes/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>ControlClinetes</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>ControlClinetes-1.0-SNAPSHOT</name>
+    <name>ControlClinetes</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
