--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /ServletsAndJSPs/ExampleOneMVC_ExampleOneMVC_war_1.0-SNAPSHOT/target/
 /ServletsAndJSPs/ExampleTwoMVC/target/
 /ServletsAndJSPs/ControlClinetes/target/
+/JavaServerFaces/helloWorldJSF/target/
