--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /ServletsAndJSPs/ExampleTwoMVC/target/
 /ServletsAndJSPs/ControlClinetes/target/
 /JavaServerFaces/helloWorldJSF/target/
+/JavaServerFaces/candidato/target/
